# hack-of-tomorrow-operators

./: .dockerignore  .gitignore  README.md  frontend_output.json  grid_costs.json  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/decision-explorer/: page.tsx
frontend/components/: decision-explorer.tsx  energy-dashboard.tsx
frontend/components/ui/: chart.tsx
frontend/lib/: data.ts  decision-data.json  decision-data.ts  real_data.json  real_data1.json  utils.ts
notebooks/: notebook.ipynb
results/: .gitignore  dashboard_data_2025-03-23_08-42-42.json
src/operatorzy/agents/: active_storage_agent.py  demand_forecasting_agent.py  energy_optimization_agent.py  energy_trading_agent.py  forecasting_agent.py  hybrid_energy_agent.py  planner_agent.py  profit_maximizing_agent.py  smart_agent.py  storage_management_agent.py  ultimate_energy_agent.py  ultimate_energy_agent_v2.py
src/operatorzy/models/: __init__.py  ai_cooperative.py  cooperative.py
src/operatorzy/simulation/: __init__.py  ai_energy_community_simulation.py  energy_community_simulation.py  run_ai_energy_community.py
src/operatorzy/utils/: __init__.py  ai_visualization.py  helper_functions.py  json_output.py
